[tool.poetry]
name = "chatgpt-data"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
langchain = "^0.0.277"
openai = "^0.27.10"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
